# zlibsync-rs

./: .gitignore  LICENSE  README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: napi-build.yml
__test__/: discord.test.ts  index.test.ts  stress.test.ts  syncability.test.ts
native/: Cargo.toml
native/src/: constants.rs  deflate.rs  inflate.rs  lib.rs
scripts/: build-native.js  check-binaries.js  prepublish-validate.mjs
src/: index.ts  native.d.ts
